# jsfuck

./: .gitignore  CMakeLists.txt  LICENSE  Macfile  Makefile  README.md  VSClangMakefile  VSMakefile  a.bat  jsfuck.rc  jsfuck_resource.h
.github/workflows/: release.yml  test.yml
c/: Makefile  vcbuild.bat
c/include/internal/: token.h
c/src/: common.c  jsfuck.c  token.c
include/: jsfuck.h
include/internal/: common.h  stream.h  stringutils.h  token.h
rust/: Cargo.toml  README.md
rust/src/: lib.rs  token.rs
src/: common.c  jsfuck.c  stream.c  stringutils.c  token.c
src/transpiler/: io.c  io.h  transpiler.c
transpiler/: transpiler.c
